tests/errors/substructural/check/move_of_copy_only_struct_errors.sim

        struct PinnedShared: Copy { x: i64 }
        extern fn take(p: PinnedShared);
        fn f(p: PinnedShared) {
            entry:
            call take(move p);
            return
        }
        